replace various copies of DatFunk.java with version in Libraries